--- a/music.html
+++ b/music.html
@@ -86,6 +86,11 @@
         title: "02 Justin Bieber - Somebody To Love",
         mp3: "songs/02 Justin Bieber - Somebody To Love.mp3",
         cover: "covers/myworld2.0.jpg"
+      },
+      {
+        title: "13 Luis Fonsi - Despacito (Remix)",
+        mp3: "songs/13 Luis Fonsi - Despacito (Remix).mp3",
+        cover: "covers/despacito.jpg"
       }
     ];
 
