--- a/Chemistry pt.html
+++ b/Chemistry pt.html
@@ -32,59 +32,8 @@
   border-radius: 5px;
   text-align: center;
 }
-
-/* Groups with distinct background colors */
-.alkali-metal {
-  background-color: #ff6666; /* Light Red */
-  color: white;
-}
-
-.alkaline-earth-metal {
-  background-color: #ffcc66; /* Light Orange */
-  color: black;
-}
-
-.transition-metal {
-  background-color: #66ccff; /* Light Blue */
-  color: black;
-}
-
-.post-transition-metal {
-  background-color: #cccccc; /* Gray */
-  color: black;
-}
-
-.metalloid {
-  background-color: #ffff66; /* Yellow */
-  color: black;
-}
-
-.nonmetal {
-  background-color: #66ff66; /* Light Green */
-  color: black;
-}
-
-.halogen {
-  background-color: #ff66ff; /* Pink */
-  color: black;
-}
-
-.noble-gas {
-  background-color: #9999ff; /* Light Purple */
-  color: black;
-}
-
-.lanthanide {
-  background-color: #ffccff; /* Light Purple Pink */
-  color: black;
-}
-
-.actinide {
-  background-color: #ff99cc; /* Magenta */
-  color: black;
-}
 .alkali-metal       { background-color: #ff6666; }
-.alkaline-earth     { background-color: #ffdead; }
+.alkaline-earth-metal     { background-color: #ffdead; }
 .transition-metal   { background-color: #ffc966; }
 .metalloid          { background-color: #cccccc; }
 .nonmetal           { background-color: #99ccff; }
@@ -92,7 +41,7 @@
 .noble-gas          { background-color: #c299ff; }
 .lanthanide         { background-color: #ffb3e6; }
 .actinide           { background-color: #ff99cc; }
-.post-transition    { background-color: #d9d9d9; }
+.post-transition-metal    { background-color: #d9d9d9; }
 .unknown            { background-color: #e0e0e0; }
 
 
