--- a/Chemistry pt.html
+++ b/Chemistry pt.html
@@ -7,14 +7,21 @@
   <style>
     body {
       font-family: Arial, sans-serif; margin: 0; padding: 0;
-      background: #f4f4f4; color: #000;
+      background: #000000; color: #ffffff;
     }
     header { background: #004d99; color: white; padding: 20px; text-align: center; }
     nav { background: #0066cc; text-align: center; padding: 10px; }
     nav a { color: white; text-decoration: none; margin: 0 15px; font-weight: bold; }
     nav a:hover { text-decoration: underline; }
 
-    #periodic-container {
+    #layout-container {
+  display: flex;
+  align-items: flex-start;
+  gap: 30px; /* Space between table and legend */
+  flex-wrap: wrap;
+}
+
+#periodic-container {
       display: grid;
       grid-template-columns: repeat(18, 60px);
       grid-auto-rows: 60px;
@@ -22,6 +29,40 @@
       justify-content: center;
       margin: 20px auto;
     }
+
+#legend {
+  border: 1px solid #ccc;
+  padding: 15px;
+  background-color: #f8f8f8;
+  color: #000000;
+  border-radius: 8px;
+  font-family: sans-serif;
+  min-width: 220px;
+}
+
+#legend h3 {
+  margin-top: 0;
+}
+#legend ul {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+
+#legend li {
+  display: flex;
+  align-items: center;
+  margin: 6px 0;
+}
+
+.legend-box {
+  width: 20px;
+  height: 20px;
+  margin-right: 10px;
+  border: 1px solid #555;
+  border-radius: 4px;
+}
+
     .element {
   border: 1px solid #ccc;
   padding: 10px;
@@ -35,13 +76,13 @@
 .alkali-metal       { background-color: #ff6666; }
 .alkaline-earth-metal     { background-color: #ffdead; }
 .transition-metal   { background-color: #ffc966; }
-.metalloid          { background-color: #cccccc; }
+.metalloid          { background-color: #09beeb; }
 .nonmetal           { background-color: #99ccff; }
 .halogen            { background-color: #66ffcc; }
 .noble-gas          { background-color: #c299ff; }
 .lanthanide         { background-color: #ffb3e6; }
 .actinide           { background-color: #ff99cc; }
-.post-transition-metal    { background-color: #d9d9d9; }
+.post-transition-metal    { background-color: #e5fb3d; }
 .unknown            { background-color: #e0e0e0; }
 
 
@@ -95,7 +136,6 @@
     <h1>Chemistry World</h1>
     <p>Interactive Grid-Style Periodic Table</p>
   </header>
-  <button id="dark-mode-toggle">Toggle Dark Mode</button>
   <nav>
     <a href="#periodic-table">Periodic Table</a>
     <a href="#history">History</a>
@@ -103,6 +143,7 @@
 
   <section id="periodic-table">
   <h2>Periodic Table (Grid)</h2>
+  <div id="layout-container">
   <div id="periodic-container">
     <!-- Period 1 -->
     <button class="element nonmetal" style="grid-column:1; grid-row:1;" data-symbol="H" data-name="Hydrogen" data-atomic="1">H<br>Hydrogen</button>
@@ -245,25 +286,103 @@
 
   </div>
 
-
-    <div id="element-modal" class="modal">
-      <div class="modal-content">
-        <span class="close">&times;</span>
-        <h3 id="element-name"></h3>
-        <p><strong>Symbol:</strong> <span id="element-symbol"></span></p>
-        <p><strong>Atomic Number:</strong> <span id="element-atomic"></span></p>
-      </div>
+   <div id="legend">
+      <h3>Element Classification Key</h3>
+      <ul>
+        <li><span class="legend-box alkali-metal"></span> Alkali Metal</li>
+        <li><span class="legend-box alkaline-earth-metal"></span> Alkaline Earth Metal</li>
+        <li><span class="legend-box transition-metal"></span> Transition Metal</li>
+        <li><span class="legend-box post-transition-metal"></span> Post-Transition Metal</li>
+        <li><span class="legend-box metalloid"></span> Metalloid</li>
+        <li><span class="legend-box nonmetal"></span> Nonmetal</li>
+        <li><span class="legend-box halogen"></span> Halogen</li>
+        <li><span class="legend-box noble-gas"></span> Noble Gas</li>
+        <li><span class="legend-box lanthanide"></span> Lanthanide Series</li>
+        <li><span class="legend-box actinide"></span> Actinide Series</li>
+      </ul>
     </div>
+  </div>
+
+    <div id="popup">
+  <div id="popup-content">
+    <span id="close-button">&times;</span>
+    <h2 id="element-name"></h2>
+    <p id="element-symbol"></p>
+    <p id="element-atomic-number"></p>
+  </div>
+</div>
   </section>
 
   <section id="history">
     <h2>History of the Periodic Table</h2>
-    <p>First arranged by Mendeleev (1869), now organized by atomic number into a predictive grid that highlights periodic trends.</p>
-  </section>
+    <p>The periodic table is an arrangement of the chemical elements, structured by their atomic number, electron configuration and recurring chemical properties. In the basic form, elements are presented in order of increasing atomic number, in the reading sequence. Then, rows and columns are created by starting new rows and inserting blank cells, so that rows (periods) and columns (groups) show elements with recurring properties (called periodicity). For example, all elements in group (column) 18 are noble gases that are largely—though not completely—unreactive.
+
+The history of the periodic table reflects over two centuries of growth in the understanding of the chemical and physical properties of the elements, with major contributions made by Antoine-Laurent de Lavoisier, Johann Wolfgang Döbereiner, John Newlands, Julius Lothar Meyer, Dmitri Mendeleev, Glenn T. Seaborg, and others.[1][2]</p>
+    <h2>Early history</h2>
+    <p>Around 330 BCE, the Greek philosopher Aristotle proposed that everything is made up of a mixture of one or more roots, an idea originally suggested by the Sicilian philosopher Empedocles. The four roots, which the Athenian philosopher Plato called elements, were earth, water, air and fire. Similar ideas existed in other ancient traditions, such as Indian philosophy with five elements: Earth, water, fire, air and aether collectively called 'pañca bhūta'.[3]
+
+Of the chemical elements shown on the periodic table, nine – carbon, sulfur, iron, copper, silver, tin, gold, mercury, and lead – have been known since antiquity, as they are found in their native form and are relatively simple to mine with primitive tools.[4] Five more elements were known in the age of alchemy: zinc, arsenic, antimony, and bismuth.[citation needed] Platinum was known to pre-Columbian South Americans, but knowledge of it did not reach Europe until the 16th century</p>
+    <h2>First classification</h2>
+    <p>The history of the periodic table is also a history of the discovery of the chemical elements. In 1661, Boyle defined elements as "those primitive and simple Bodies of which the mixt ones are said to be composed, and into which they are ultimately resolved."[5]
+
+The first person in recorded history to discover a new element was Hennig Brand, a bankrupt German merchant. Brand tried to discover the philosopher's stone—a mythical object that was supposed to turn inexpensive base metals into gold. In 1669, or later, his experiments with distilled human urine resulted in the production of a glowing white substance, which he called "cold fire" (kaltes Feuer).[6] He kept his discovery secret until 1680, when Anglo-Irish[7] chemist Robert Boyle rediscovered phosphorus and published his findings.
+
+The discovery of phosphorus helped to raise the question of what it meant for a substance (any given variety of matter) to be an element, in a world where versions of atomic theory were only speculative and later understandings of the nature of substances were only beginning to become possible.
+
+In 1718, Étienne François Geoffroy's Affinity Table made use of several aspects — (1) tabular grouping and (2) correlation with chemical affinity — that would later be reprised.
+
+
+Geoffroy's 1718 Affinity Table: at the head of each column is a chemical species with which all the species below can combine. Some historians have defined this table as being the start of the chemical revolution.[8]
+In 1789, French chemist Antoine Lavoisier wrote Traité Élémentaire de Chimie (Elementary Treatise of Chemistry), which is considered to be the first modern textbook about chemistry. Lavoisier defined an element as a substance whose smallest units cannot be broken down into a simpler substance.[9] Lavoisier's book contained a list of "simple substances" that Lavoisier believed could not be broken down further, which included oxygen, nitrogen, hydrogen, phosphorus, mercury, zinc and sulfur, which formed the basis for the modern list of elements. Lavoisier's list also included "light" and "caloric", which at the time were believed to be material substances. He classified these substances into metals and nonmetals. While many leading chemists refused to believe Lavoisier's new revelations, the Elementary Treatise was written well enough to convince the younger generation. However, Lavoisier's descriptions of his elements lack completeness, as he only classified them as metals and non-metals.
+
+
+Dalton's 1806 list of known elements by atomic weight
+In 1808–10, British natural philosopher John Dalton published a method by which to arrive at provisional atomic weights for the elements known in his day, from stoichiometric measurements and reasonable inferences. Dalton's atomic theory was adopted by many chemists during the 1810s and 1820s.
+
+In 1815, British physician and chemist William Prout noticed that atomic weights seemed to be multiples of that of hydrogen.[10][11]
+
+In 1817, German physicist Johann Wolfgang Döbereiner began to formulate one of the earliest attempts to classify the elements.[12] In 1829, he found that he could form some of the elements into groups of three, with the members of each group having related properties. He termed these groups triads.[13] In 1843, building on work done by Döbereiner, Leopold Gmelin developed a forerunner of the modern periodic table that listed 55 chemical elements grouped by common characteristics.[14]
+
+Definition of Triad law
+
+"Chemically analogous elements arranged in increasing order of their atomic weights formed well marked groups of three called Triads in which the atomic weight of the middle element was found to be generally the arithmetic mean of the atomic weight of the other two elements in the triad.
+
+chlorine, bromine, and iodine
+calcium, strontium, and barium
+sulfur, selenium, and tellurium
+lithium, sodium, and potassium"
+All those attempts to sort elements by atomic weights were inhibited by the inaccurate determination of weights, and not just slightly: carbon, oxygen and many other elements were believed to be half their actual masses (cf. the illustration by Dalton above), because only monatomic gases were believed to exist.[15] Even though Amedeo Avogadro and, independently of him, André-Marie Ampère, proposed the solution in the form of diatomic molecules and Avogadro's law already in the 1810s, it was not until after Stanislao Cannizzaro's publications in late 1850s when the theory began to be widely considered.
+
+In 1860, the modern scientific consensus emerged at the first international chemical conference, the Karlsruhe Congress, and a revised list of elements and atomic masses was adopted. It helped spur creation of more extensive systems. The first such system emerged in two years.[</p>
+<p>Source: <a href="https://en.wikipedia.org/wiki/History_of_the_periodic_table">Wikipedia</a></p>
+</section>
 
   <footer><p>&copy; 2025 Chemistry World</p></footer>
 
-  <script>
+  <script>1
+     document.addEventListener("DOMContentLoaded", function () {
+    const elements = document.querySelectorAll('.element');
+
+    elements.forEach(el => {
+      el.addEventListener('click', function () {
+        const name = el.getAttribute('data-name');
+        const symbol = el.getAttribute('data-symbol');
+        const atomic = el.getAttribute('data-atomic');
+
+        document.getElementById('element-name').textContent = name;
+        document.getElementById('element-symbol').textContent = `Symbol: ${symbol}`;
+        document.getElementById('element-atomic-number').textContent = `Atomic Number: ${atomic}`;
+
+        document.getElementById('popup').style.display = 'block';
+      });
+    });
+
+    // ✅ Attach the close event once the DOM is loaded
+    const closeButton = document.getElementById('close-button');
+    closeButton.addEventListener('click', function () {
+      document.getElementById('popup').style.display = 'none';
+    });
+  });
     // Modal logic
     document.querySelectorAll('.element').forEach(btn => {
       btn.addEventListener('click', () => {
@@ -284,11 +403,6 @@
     document.addEventListener('keydown', e => {
       if (e.key === 'Escape') document.getElementById('element-modal').style.display = 'none';
     });
-
-    // Dark mode toggle
-    document.getElementById('dark-mode-toggle').onclick = () => {
-      document.body.classList.toggle('dark-mode');
-    };
   </script>
 </body>
 </html>
