--- a/Chemistry pt.html
+++ b/Chemistry pt.html
@@ -354,7 +354,7 @@ lithium, sodium, and potassium"
 All those attempts to sort elements by atomic weights were inhibited by the inaccurate determination of weights, and not just slightly: carbon, oxygen and many other elements were believed to be half their actual masses (cf. the illustration by Dalton above), because only monatomic gases were believed to exist.[15] Even though Amedeo Avogadro and, independently of him, André-Marie Ampère, proposed the solution in the form of diatomic molecules and Avogadro's law already in the 1810s, it was not until after Stanislao Cannizzaro's publications in late 1850s when the theory began to be widely considered.
 
 In 1860, the modern scientific consensus emerged at the first international chemical conference, the Karlsruhe Congress, and a revised list of elements and atomic masses was adopted. It helped spur creation of more extensive systems. The first such system emerged in two years.[</p>
-<p>Source: <a href="https://en.wikipedia.org/wiki/History_of_the_periodic_table">Wikipedia</a></p>
+<p>Source: <a href="https://en.wikipedia.org/wiki/History_of_the_periodic_table" target="_blank">Wikipedia</a></p>
 </section>
 
   <footer><p>&copy; 2025 Chemistry World</p></footer>
