--- a/Chemistry pt.html
+++ b/Chemistry pt.html
@@ -2,15 +2,19 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <meta name="description" content="Basic chemistry concepts like matter, atoms, molecules, and reactions.">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <title>Chemistry World – Periodic Table Grid</title>
   <style>
     body {
       font-family: Arial, sans-serif; margin: 0; padding: 0;
       background: #000000; color: #ffffff;
+      background: url('images/Chemistry.jpg') no-repeat center center fixed;
+      background-size: cover;
     }
-    header { background: #004d99; color: white; padding: 20px; text-align: center; }
-    nav { background: #0066cc; text-align: center; padding: 10px; }
+    header { background: transparent; color: white; padding: 20px; text-align: center; }
+    nav { background: transparent; text-align: center; padding: 10px; }
     nav a { color: white; text-decoration: none; margin: 0 15px; font-weight: bold; }
     nav a:hover { text-decoration: underline; }
 
@@ -21,6 +25,16 @@
   flex-wrap: wrap;
 }
 
+h1 {
+  color: chocolate; 
+}
+h2 {
+  color: chocolate;
+}
+h3 {
+  color: chocolate; 
+  
+}
 #periodic-container {
       display: grid;
       grid-template-columns: repeat(18, 60px);
@@ -33,8 +47,8 @@
 #legend {
   border: 1px solid #ccc;
   padding: 15px;
-  background-color: #f8f8f8;
-  color: #000000;
+  background-color: transparent;
+  color: #ffffff;
   border-radius: 8px;
   font-family: sans-serif;
   min-width: 220px;
@@ -73,17 +87,16 @@
   border-radius: 5px;
   text-align: center;
 }
-.alkali-metal       { background-color: #ff6666; }
+.alkali-metal       { background-color: crimson; }
 .alkaline-earth-metal     { background-color: #ffdead; }
-.transition-metal   { background-color: #ffc966; }
+.transition-metal   { background-color: coral; }
 .metalloid          { background-color: #09beeb; }
 .nonmetal           { background-color: #99ccff; }
 .halogen            { background-color: #66ffcc; }
-.noble-gas          { background-color: #c299ff; }
+.noble-gas          { background-color: magenta }
 .lanthanide         { background-color: #ffb3e6; }
-.actinide           { background-color: #ff99cc; }
+.actinide           { background-color:aqua }
 .post-transition-metal    { background-color: #e5fb3d; }
-.unknown            { background-color: #e0e0e0; }
 
 
 /* Add hover effect if you want */
@@ -118,14 +131,14 @@
   width: 100vw;
   height: 100vh;
   overflow: auto;
-  background-color: rgba(0, 0, 0, 0.6);
+  background-color: transparent;
   backdrop-filter: blur(3px);
   animation: fadeIn 0.3s ease forwards;
 }
 
 /* Scale-in content box */
 #popup-content {
-  background-color: #fff;
+  background-color: rgb(0, 0, 0);
   margin: 10% auto;
   padding: 30px 20px;
   border-radius: 10px;
@@ -158,12 +171,12 @@
   top: 10px;
   right: 15px;
   font-size: 24px;
-  color: #333;
+  color: #ffffff;
   cursor: pointer;
 }
 
 #close-button:hover {
-  color: red;
+  color: #d62828;
 }
 
 /* Element text styles */
@@ -171,22 +184,22 @@
   margin: 10px 0;
   font-size: 24px;
   font-weight: bold;
-  color: #222;
+  color: #ffffff;
 }
 
 #element-symbol {
   font-size: 40px;
   font-weight: bold;
-  color: #007acc;
+  color: #ffffff;
 }
 
 #element-atomic-number {
   font-size: 18px;
-  color: #555;
+  color: #ffffff;
 }
 #element-mass-number {
   font-size: 18px;
-  color: #666;
+  color: #ffffff;
 }
 
     /* Dark mode */
@@ -198,7 +211,7 @@
     body.dark-mode .element { background:#444; }
     body.dark-mode .modal-content { background:#2a2a2a; color:#fff; }
 
-    footer { background:#003366; color:white; text-align:center; padding:10px 0; margin-top:20px; }
+    footer { background:transparent; color:white; text-align:center; padding:10px 0; margin-top:20px; }
   </style>
 </head>
 <body>
@@ -438,6 +451,24 @@
 
   </section>
 
+<section>
+  <details>
+  <summary style="color: chocolate;">What is Matter?</summary>
+  <p>Matter is anything that has mass and occupies space...</p>
+  </details>
+
+  <h2>States of Matter</h2>
+  <ul>
+    <li>Solid</li>
+    <li>Liquid</li>
+    <li>Gas</li>
+    <li>Plasma</li>
+    <li>Bose-Einstein Condensate</li>
+  </ul>
+
+
+</section>
+
   <section id="history">
     <h2>History of the Periodic Table</h2>
     <p>The periodic table is an arrangement of the chemical elements, structured by their atomic number, electron configuration and recurring chemical properties. In the basic form, elements are presented in order of increasing atomic number, in the reading sequence. Then, rows and columns are created by starting new rows and inserting blank cells, so that rows (periods) and columns (groups) show elements with recurring properties (called periodicity). For example, all elements in group (column) 18 are noble gases that are largely—though not completely—unreactive.
@@ -479,7 +510,7 @@ lithium, sodium, and potassium"
 All those attempts to sort elements by atomic weights were inhibited by the inaccurate determination of weights, and not just slightly: carbon, oxygen and many other elements were believed to be half their actual masses (cf. the illustration by Dalton above), because only monatomic gases were believed to exist.[15] Even though Amedeo Avogadro and, independently of him, André-Marie Ampère, proposed the solution in the form of diatomic molecules and Avogadro's law already in the 1810s, it was not until after Stanislao Cannizzaro's publications in late 1850s when the theory began to be widely considered.
 
 In 1860, the modern scientific consensus emerged at the first international chemical conference, the Karlsruhe Congress, and a revised list of elements and atomic masses was adopted. It helped spur creation of more extensive systems. The first such system emerged in two years.[</p>
-<p>Source: <a href="https://en.wikipedia.org/wiki/History_of_the_periodic_table" target="_blank">Wikipedia</a></p>
+<p style="color: #ffffff;">Source: <a href="https://en.wikipedia.org/wiki/History_of_the_periodic_table" target="_blank">Wikipedia</a></p>
 </section>
 
   <footer><p>&copy; 2025 Chemistry World</p></footer>
@@ -560,6 +591,8 @@ document.getElementById('close-button').onclick = function () {
   </script>
 </body>
 </html>
+
+
 
 
 
