--- a/another.html
+++ b/another.html
@@ -200,6 +200,9 @@
   <script>
     // Sample playlist (trimmed for brevity)
         const playlist = [
+      { title: "Justin Bieber - DAISIES", mp3: "songs/Justin Bieber - DAISIES.mp3", cover: "covers/Swag.jpg" },
+      { title: "Justin Bieber - YUKON", mp3: "songs/Justin Bieber - YUKON.mp3", cover: "covers/Swag.jpg" },
+      { title: "Justin Bieber - GO BABY", mp3: "songs/Justin Bieber - GO BABY.mp3", cover: "covers/Swag.jpg" },
       { title: "01 Justin Bieber - Heartbreaker", mp3: "songs/01 Justin Bieber - Heartbreaker.mp3", cover: "covers/journals.jpg" },
       { title: "02 Justin Bieber - All That Matters", mp3: "songs/02 Justin Bieber - All That Matters.mp3", cover: "covers/journals.jpg" },
       { title: "03 Justin Bieber - Hold Tight", mp3: "songs/03 Justin Bieber - Hold Tight.mp3", cover: "covers/journals.jpg" },
@@ -252,6 +255,20 @@
       { title: "09 Luis Fonsi - Despacito", mp3: "songs/09 Luis Fonsi - Despacito.mp3", cover: "covers/despacito.jpg" },
       { title: "13 Luis Fonsi - Despacito (Remix)", mp3: "songs/13 Luis Fonsi - Despacito (Remix).mp3", cover: "covers/despacito.jpg" },
       { title: "The Weeknd - Timeless", mp3: "songs/The Weeknd - Timeless.mp3", cover: "covers/timeless.jpg" },
+      { title: "The Weeknd - The Hills", mp3: "songs/The Weeknd - The Hills.mp3", cover: "covers/Beauty Behind The Madness.jpg" },
+      { title: "The Weeknd - Can t Feel My Face", mp3: "songs/The Weeknd - Can t Feel My Face.mp3", cover: "covers/Beauty Behind The Madness.jpg" },
+      { title: "01 The Weeknd - Starboy", mp3: "songs/01 The Weeknd - Starboy.mp3", cover: "covers/Starboy.jpg" },
+      { title: "The Weeknd - Party Monster", mp3: "songs/The Weeknd - Party Monster.mp3", cover: "covers/Starboy.jpg" },
+      { title: "The Weeknd - False Alarm", mp3: "songs/The Weeknd - False Alarm.mp3", cover: "covers/Starboy.jpg" },
+      { title: "The Weeknd - Reminder", mp3: "songs/The Weeknd - Reminder.mp3", cover: "covers/Starboy.jpg" },
+      { title: "The Weeknd - I Feel It Coming", mp3: "songs/The Weeknd - I Feel It Coming.mp3", cover: "covers/Starboy.jpg"},
+      { title: "The Weeknd - Take My Breath", mp3: "songs/The Weeknd - Take My Breath.mp3", cover: "covers/Dawn FM.jpg"},
+      { title: "The Weeknd - Out of Time", mp3: "songs/The Weeknd - Out of Time.mp3", cover: "covers/Dawn FM.jpg"},
+      { title: "The Weeknd - Is There Someone Else", mp3: "songs/The Weeknd - Is There Someone Else.mp3", cover: "covers/Dawn FM.jpg"},
+      { title: "02 Ariana Grande - Problem", mp3: "songs/02 Ariana Grande - Problem.mp3", cover: "covers/My Everything.jpg"},
+      { title: "03 Ariana Grande - One Last Time", mp3: "songs/03 Ariana Grande - One Last Time.mp3", cover: "covers/My Everything.jpg"},
+      { title: "05 Ariana Grande - Break Free", mp3: "songs/05 Ariana Grande - Break Free.mp3", cover: "covers/My Everything.jpg"},
+      { title: "09 Ariana Grande - Love Me Harder", mp3: "songs/09 Ariana Grande - Love Me Harder.mp3", cover: "covers/My Everything.jpg"},
       { title: "Kendrick Lamar - luther", mp3: "songs/Kendrick Lamar - luther.mp3", cover: "covers/gnx.jpg" },
       { title: "Kendrick Lamar - tv off", mp3: "songs/Kendrick Lamar - tv off.mp3", cover: "covers/gnx.jpg" },
       { title: "Kendrick Lamar - peekaboo", mp3: "songs/Kendrick Lamar - peekaboo.mp3", cover: "covers/gnx.jpg" },
